<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayUpdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cake_blue"
    tools:context=".Fragments.UpdateContact">

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tvModificar"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNameUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etAddressUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etaddress"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameUpdate" />

    <EditText
        android:id="@+id/etPhoneUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etPhone"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddressUpdate" />

    <EditText
        android:id="@+id/etOpeningUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:ems="10"
        android:hint="@string/etOpening"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneUpdate" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:backgroundTint="@color/cake_blue"
        android:text="@string/btnModificar"
        android:theme="@style/Theme.QuerySQL.INSERT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOpeningUpdate" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/base_hielo_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <Spinner
        android:id="@+id/spinnerUpdate"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/fondo_ingreso_datos"
        android:dropDownWidth="wrap_content"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdate" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvDatosUpdate"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>